--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
-  text-align: center;
+  text-align: left;
+  display: block;
+  width: auto;
 }
 
 .App-logo {
@@ -15,7 +17,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: center;
